# ruff-usage-aggregate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
aux/: guess_repo_name_to_jsonl.py  scrape_dependents.py
data/: known-github-tomls-clean.jsonl  known-github-tomls.jsonl  path-unknown.jsonl  repo_api_data.jsonl
ruff_usage_aggregate/: __main__.py  cli.py  constants.py  errors.py  helpers.py  models.py
ruff_usage_aggregate/actions/: clean_with_repo_api.py  github_search.py  scan_tomls.py  toml_download.py
ruff_usage_aggregate/data/: known_repos.py
ruff_usage_aggregate/format/: helpers.py  histogram.py  markdown.py  top_markdown.py
ruff_usage_aggregate/helpers/: jsonl.py
